sumo/tests/traci/get_variable/MeMeDetector/errors/UnknownAD/errors.traci
Error: Answered with error to command 0xa1: Areal detector 'xxx' is not known
